# AtividadesCG

./: CMakeLists.txt  RESULT.md
3D_Models/Planetas/: planeta.mtl
3D_Models/Suzanne/: SuzanneTriTextured.mtl
Hello3D/: CMakeLists.txt
Hello3D - Cube/: CMakeLists.txt
Hello3D - Cube/Exercicio8/: Exericio8.vcxproj  Origem.cpp
Hello3D - Cube/Exericio8/: Origem.cpp
Hello3D - OBJ/: CMakeLists.txt
Hello3D - OBJ - Texture/: CMakeLists.txt
Hello3D - OBJ - Texture/Exericio8/: Exericio8.vcxproj  Origem.cpp
Hello3D - OBJ/Exercicio8/: Origem.cpp
Hello3D - OBJ/Exericio8/: Exericio8.vcxproj  Origem.cpp
Hello3D - withShaderClass/: CMakeLists.txt
Hello3D - withShaderClass/Exercicio8/: Origem.cpp
Hello3D/Exercicio8/: Origem.cpp
Hello3D/Exericio8/: Origem.cpp
NewHello3D/: CMakeLists.txt  NewHello3D.sln  core.cpp  core.hpp  main.cpp  sgl.cpp  sgl.hpp
NewHello3D - Camera/: CMakeLists.txt  sgl.cpp  sgl.hpp
NewHello3D - Lighting/: CMakeLists.txt  main.cpp  sgl.cpp  sgl.hpp
NewHello3D/Exericio8/: Exericio8.vcxproj  Exericio8.vcxproj.filters  main.cpp  sgl.cpp  sgl.hpp
dependencies/GLAD-linux/include/glad/: glad.h
dependencies/GLAD-linux/src/: glad.c
dependencies/spdlog/include/spdlog/fmt/bundled/: fmt.license.rst:Zone.Identifier:$DATA
